--- a/media/css/main.css
+++ b/media/css/main.css
@@ -194,7 +194,7 @@ tt {
 html, body {
   border: none;
   color: #000;
-  font: 14px/150% 'Ubuntu', 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', 'Verdana', sans-serif;
+  font: 14px/150% 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', 'Verdana', sans-serif;
   height: 100%;
   margin: 0;
   padding: 0;
@@ -297,7 +297,7 @@ body > .wrapper > .header {
 }
 body > .wrapper > .header > .title {
   color: white;
-  font: 60px Georgia, Utopia, 'Palatino Linotype', Palatino, serif;
+  font: 60px 'Ubuntu', Georgia, Utopia, 'Palatino Linotype', Palatino, serif;
   margin: 0 auto;
   padding: 0.7em 0 0.3em;
   text-align: left;
