--- a/media/css/main.less
+++ b/media/css/main.less
@@ -42,7 +42,7 @@ html,
 body {
   border: none;
   color: #000;
-  font: 14px/150% 'Ubuntu','Lucida Grande','Lucida Sans Unicode','Geneva','Verdana',sans-serif;
+  font: 14px/150% 'Lucida Grande','Lucida Sans Unicode','Geneva','Verdana',sans-serif;
   height: 100%;
   margin: 0;
   padding: 0;
@@ -126,7 +126,7 @@ body {
       position: relative;
       > .title {
         color: white;
-        font: 60px Georgia,Utopia,'Palatino Linotype',Palatino,serif;
+        font: 60px 'Ubuntu',Georgia,Utopia,'Palatino Linotype',Palatino,serif;
         margin: 0 auto;
         padding: 0.7em 0 0.3em;
         text-align: left;
