--- a/media/css/main.less
+++ b/media/css/main.less
@@ -69,6 +69,12 @@ ul, ol {
 a:hover, a:active {
   color: #f30;
 }
+::selection,
+::-moz-selection,
+::-webkit-selection {
+  color: white;
+  background: url(/media/images/skin/bg-box.png) repeat scroll left top #6B3;
+}
 ul > li {
   list-style-type: square;
 }
