--- a/media/css/main.css
+++ b/media/css/main.css
@@ -370,7 +370,7 @@ body > .wrapper > .container > .content .pad .main blockquote + p {
 body > .wrapper > .container > .content .pad .main .img {
   padding: 5px;
 }
-body > .wrapper > .container > .content .pad .main img {
+body > .wrapper > .container > .content .pad .main img, body > .wrapper > .container > .content .pad .main iframe {
   padding: 4px;
   border: 1px solid white;
   max-width: 100%;
