--- a/media/css/main.less
+++ b/media/css/main.less
@@ -198,7 +198,8 @@ body {
             .img {
               padding: 5px;
             }
-            img {
+            img,
+            iframe {
               padding: 4px;
               border: 1px solid white;
               max-width: 100%;
