--- a/media/css/main.less
+++ b/media/css/main.less
@@ -199,7 +199,7 @@ body {
               padding: 5px;
             }
             img,
-            iframe {
+            .img iframe {
               padding: 4px;
               border: 1px solid white;
               max-width: 100%;
