--- a/media/css/main.less
+++ b/media/css/main.less
@@ -461,7 +461,7 @@ ul + .highlight {
     a { text-decoration: none; }
     .folder, .file { padding: 0 0 2px 18px; display: inline-block; }
     .folder { background: url(/media/images/skin/treeview/folder.gif) left -1px no-repeat; }
-    .file { background: url(/media/images/skin/treeview/file.gif) left 1px no-repeat; line-height: 125%; }
+    .file { background: url(/media/images/skin/treeview/file.gif) left 1px no-repeat; line-height: 125%; max-width: 130px; }
     li.post + li.post {
       margin-top: -5px;
     }
