updated rss feed title

--- a/_layouts/rss.html
+++ b/_layouts/rss.html
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <rss version="2.0" xmlns:atom="http://www.w3.org/2005/Atom">
   <channel>
-    <title>Attila O.&apos;s weblog</title>
+    <title>Attila O. on code</title>
     <link>http://aatiis.me/</link>
     <description>My personal blog.</description>
     <language>en-us</language>
