--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,7 @@ layout: base
 <blockquote>
   <span class="date"></span> posted on: <code>{{ page.date | date_to_string }}</code>;
   <span class="tags"></span> tags: {% for tag in page.tags %}<code>{{ tag }}</code>{% if forloop.last %};{% else %}, {% endif %}{% endfor %}
+  <g:plusone size="small"></g:plusone>
 </blockquote>
 
 {{ content }}
