fix +1 btn positioning

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,9 @@ layout: base
 <blockquote>
   <span class="date"></span> posted on: <code>{{ page.date | date_to_string }}</code>;
   <span class="tags"></span> tags: {% for tag in page.tags %}<code>{{ tag }}</code>{% if forloop.last %};{% else %}, {% endif %}{% endfor %}
-  <g:plusone size="small"></g:plusone>
+  <div class="plusone">
+    <g:plusone size="small"></g:plusone>
+  </div>
 </blockquote>
 
 {{ content }}
