--- a/media/css/main.less
+++ b/media/css/main.less
@@ -228,6 +228,11 @@ body {
               margin: 0 -2px -4px 2px;
               width: 16px;
             }
+            .plusone {
+              display: inline-block;
+              position: relative;
+              top: 2px;
+            }
             .hr {
               ._white();
               padding: 2px;
