--- a/_includes/post-preview.html
+++ b/_includes/post-preview.html
@@ -4,7 +4,7 @@
     <span class="date"></span> posted on: <code class="date">{{ post.date | date_to_string }}</code>;
     <span class="tags"></span> tags: {% for tag in post.tags %}<code class="tag">{{ tag }}</code>{% if forloop.last %};{% else %}, {% endif %}{% endfor %}
     <div class="plusone">
-      <g:plusone size="small" href="post.url"></g:plusone>
+      <g:plusone size="small" href="{{ post.url }}"></g:plusone>
     </div>
   </blockquote>
   <blockquote class="summary">{{ post.summary | textilize }}</blockquote>
