--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -18,14 +18,14 @@
       <div class="container">
         <div class="content">
           <div class="line">
-            <div class="unit size4of5">
+            <div class="unit size3of4">
               <div class="pad">
                 <div class="main">
                   {{ content }}
                 </div>
               </div>
             </div>
-            <div class="unit size1of5 lastUnit">
+            <div class="unit lastUnit">
               <div class="sidebar">
                 <div class="avatar">
                   <img src="/media/images/skin/avatar-clippy.png" alt="This is me."/>
