--- a/media/css/main.css
+++ b/media/css/main.css
@@ -306,7 +306,7 @@ body > .wrapper > .header > .title {
   padding: 0.7em 0 0.3em;
   text-align: left;
   text-shadow: 2px 2px rgba(0, 0, 0, 0.1);
-  width: 960px;
+  max-width: 960px;
 }
 body > .wrapper > .header > .title a {
   color: inherit;
@@ -332,7 +332,7 @@ body > .wrapper > .container {
 body > .wrapper > .container > .content {
   margin: 0 auto;
   width: 85%;
-  min-width: 960px;
+  max-width: 960px;
 }
 body > .wrapper > .container > .content .pad {
   padding: 0 15px 0 0;
@@ -426,6 +426,9 @@ body > .wrapper > .container > .content .pad .main .comments > .fb_iframe_widget
 body > .wrapper > .container > .content .pad .main .comments > .fb_iframe_widget > span > iframe {
   width: inherit !important;
 }
+body > .wrapper > .container > .content .sidebar {
+  max-width: 192px;
+}
 body > .wrapper > .container > .content .sidebar > div {
   margin: 0 0 10px;
   background: url(/media/images/skin/bg-box.png) repeat scroll left top transparent;
@@ -450,6 +453,9 @@ body > .wrapper > .container > .content .sidebar > .avatar > img {
   position: absolute;
   right: 108px;
   top: -9px;
+}
+body > .wrapper > .container > .content .sidebar > .archives {
+  word-wrap: break-word;
 }
 body > .wrapper > .container > .content .sidebar > .archives > .header {
   background: url(/media/images/skin/icons/archives.png) no-repeat scroll 5px 5px transparent;
