--- a/media/css/main.less
+++ b/media/css/main.less
@@ -137,7 +137,7 @@ body {
         padding: 0.7em 0 0.3em;
         text-align: left;
         text-shadow: 2px 2px rgba(0, 0, 0, 0.1);
-        width: 960px;
+        max-width: 960px;
         a {
           color: inherit;
           text-decoration: inherit;
@@ -163,7 +163,7 @@ body {
       > .content {
         margin: 0 auto;
         width: 85%;
-        min-width: 960px;
+        max-width: 960px;
         .pad {
           padding: 0 15px 0 0;
           .main {
@@ -258,6 +258,7 @@ body {
           }
         }
         .sidebar {
+          max-width: 192px;
           > div {
             margin: 0 0 10px;
             ._white();
@@ -284,6 +285,7 @@ body {
             }
           }
           > .archives {
+            word-wrap: break-word;
             > .header {
               background: url(/media/images/skin/icons/archives.png) no-repeat scroll 5px 5px transparent;
             }
