--- a/media/css/main.less
+++ b/media/css/main.less
@@ -162,8 +162,7 @@ body {
       padding: 0 10px 120px 10px;
       > .content {
         margin: 0 auto;
-        width: 85%;
-        max-width: 960px;
+        width: 960px;
         .pad {
           padding: 0 15px 0 0;
           .main {
