--- a/media/css/main.css
+++ b/media/css/main.css
@@ -331,8 +331,7 @@ body > .wrapper > .container {
 }
 body > .wrapper > .container > .content {
   margin: 0 auto;
-  width: 85%;
-  max-width: 960px;
+  width: 960px;
 }
 body > .wrapper > .container > .content .pad {
   padding: 0 15px 0 0;
