--- a/media/css/main.css
+++ b/media/css/main.css
@@ -303,7 +303,7 @@ body > .wrapper > .header > .title {
   color: white;
   font: 60px 'Ubuntu', Georgia, Utopia, 'Palatino Linotype', Palatino, serif;
   margin: 0 auto;
-  padding: 0.7em 0 0.3em;
+  padding: 1em 0 0 2em;
   text-align: left;
   text-shadow: 2px 2px rgba(0, 0, 0, 0.1);
   max-width: 960px;
