--- a/media/css/main.less
+++ b/media/css/main.less
@@ -134,7 +134,7 @@ body {
         color: white;
         font: 60px 'Ubuntu',Georgia,Utopia,'Palatino Linotype',Palatino,serif;
         margin: 0 auto;
-        padding: 0.7em 0 0.3em;
+        padding: 1em 0 0 2em;
         text-align: left;
         text-shadow: 2px 2px rgba(0, 0, 0, 0.1);
         max-width: 960px;
