--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -5,8 +5,8 @@ title: Attila Oláh
 <ul class="wrap home">
   {% for page in paginator.posts %}
   <li>
-    {% if page.layout == "page" %}
-      {% include page.html %}
+    {% if page.layout == "post" %}
+      {% include post.html %}
     {% else if page.layout == "video" %}
       {% include video.html %}
     {% endif %}
