fix video posts

--- a/_includes/video.html
+++ b/_includes/video.html
@@ -1,6 +1,6 @@
 <article class="wrap">
   <header>
-    <time class="condensed thin" datetime="{{ page.date | date: "%Y-%m-%dT00:00:00Z" }}">{{ page.date | date: "%d %B %Y" }}</time>
+    <time class="condensed thin" datetime="{{ page.date | date: "%Y-%m-%dT00:00:00Z" }}">{{ page.date | date: "%d %b %Y" }}</time>
     <h1 class="condensed">
       <a href="{{ page.source }}">{{ page.title }}</a>
     </h1>
