--- a/media/css/main.less
+++ b/media/css/main.less
@@ -171,6 +171,8 @@ body {
             h1 {
               font-size: 1.5em;
               margin: 0.67em 0;
+              position: relative;
+              z-index: 1;
             }
             h2 {
               font-size: 1.25em;
