clear floats before subtitles in posts

--- a/media/css/main.css
+++ b/media/css/main.css
@@ -349,6 +349,7 @@ body > .wrapper > .container > .content .pad .main h1 {
 body > .wrapper > .container > .content .pad .main h2 {
   font-size: 1.25em;
   margin: 0.83em 0;
+  clear: both;
 }
 body > .wrapper > .container > .content .pad .main blockquote {
   margin: 1em 0;
