--- a/media/css/main.less
+++ b/media/css/main.less
@@ -177,6 +177,7 @@ body {
             h2 {
               font-size: 1.25em;
               margin: 0.83em 0;
+              clear: both;
             }
             blockquote {
               margin: 1em 0;
