--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,6 +15,7 @@ layout: base
 {{ content }}
 
 <div class="comments">
-    <div class="hr"></div>
-    <fb:comments></fb:comments>
+  <div class="hr"></div>
+  <script src="http://aatiis.disqus.com/combination_widget.js?num_items=2&hide_mods=0&color=green&default_tab=popular&excerpt_length=200"></script>
+  <fb:comments></fb:comments>
 </div>
