--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" xmlns:fb="http://www.facebook.com/2008/fbml">
+<html lang="en">
   <head>
     <meta charset="utf-8"/>
     <title>{{ page.title }}</title>
