--- a/_src/css/main.less
+++ b/_src/css/main.less
@@ -621,7 +621,20 @@ pre {
 }
 
 /* Disqus Comments extra styles */
-#dsq-combo-widget.green #dsq-combo-content .dsq-combo-box {
+#dsq-pagination {
+  float: left;
+  > ul {
+    margin: 2px 0;
+  }
+}
+#dsq-trackback-url {
+  color: #c30;
+  float: left;
+}
+#dsq-combo-widget {
+  clear: both;
+}
+#dsq-combo-content .dsq-combo-box {
   margin-right: 10px;
 }
 
