--- a/_src/css/main.css
+++ b/_src/css/main.css
@@ -913,7 +913,20 @@ pre .tex .formula {
   opacity: 0.5;
 }
 /* Disqus Comments extra styles */
-#dsq-combo-widget.green #dsq-combo-content .dsq-combo-box {
+#dsq-pagination {
+  float: left;
+}
+#dsq-pagination > ul {
+  margin: 2px 0;
+}
+#dsq-trackback-url {
+  color: #c30;
+  float: left;
+}
+#dsq-combo-widget {
+  clear: both;
+}
+#dsq-combo-content .dsq-combo-box {
   margin-right: 10px;
 }
 /*
