--- a/_src/css/main.less
+++ b/_src/css/main.less
@@ -621,11 +621,14 @@ pre {
 }
 
 /* Disqus Comments extra styles */
+#disqus_thread {
+  margin-right: 10px;
+}
 #dsq-pagination {
   float: left;
-  > ul {
-    margin: 2px 0;
-  }
+}
+#dsq-footer {
+  margin: 2px 0;
 }
 #dsq-trackback-url {
   color: #c30;
