added disqus id

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,6 +17,6 @@ layout: base
 <div class="comments">
   <div class="hr"></div>
   <div id="disqus_thread"></div>
-  <script>disqus_shortname="aatiis";(function(){var s;(s=document.createElement("script")).src="http://"+(disqus_shortname="aatiis")+".disqus.com/embed.js";s.async=!0;(document.head||document.getElementsByTagName("head")[0]).appendChild(s);})();</script>
+  <script>disqus_shortname="aatiis";disqus_identifier=location.pathname.replace(/\.html$/,"");(function(){var s;(s=document.createElement("script")).src="http://"+(disqus_shortname="aatiis")+".disqus.com/embed.js";s.async=!0;(document.head||document.getElementsByTagName("head")[0]).appendChild(s);})();</script>
   <script src="http://aatiis.disqus.com/combination_widget.js?num_items=2&hide_mods=0&color=green&default_tab=popular&excerpt_length=200"></script>
 </div>
