updated disqus css

--- a/_src/css/main.css
+++ b/_src/css/main.css
@@ -920,7 +920,7 @@ pre .tex .formula {
   float: left;
 }
 #dsq-footer {
-  margin: 2px 0;
+  margin: 2px 0 !important;
 }
 #dsq-trackback-url {
   color: #c30;
