--- a/_src/css/main.less
+++ b/_src/css/main.less
@@ -429,6 +429,9 @@ body {
     }
   }
 }
+#previews > div:first-child > .summary {
+  margin-right: 32px;
+}
 
 /* highlight & ul fixes */
 .highlight + ul {
