--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,18 @@
 body {
 	margin: 0;
 	padding: 0;
-	font: normal .8125rem Roboto,arial,sans-serif;
+	font: normal 1rem Roboto,arial,sans-serif;
 }
 h1, h2 {
 	margin: 0;
 	font-weight: normal;
+}
+a {
+	color: inherit;
+	text-decoration: none;
+}
+a:hover {
+	text-decoration: underline;
 }
 ::selection {
 	color: #fff;
@@ -41,6 +48,9 @@ h1, h2 {
 	max-width: 56rem;
 	margin: 0 auto;
 }
+.center {
+	text-align: center;
+}
 
 /* Header styles. */
 header {
@@ -50,13 +60,6 @@ header {
 }
 header > div {
 	height: 32rem;
-}
-header a {
-	color: inherit;
-	text-decoration: none;
-}
-header a:hover {
-	text-decoration: underline;
 }
 header .avatar {
 	width: 12rem;
@@ -185,4 +188,75 @@ footer {
 	color: #999;
 	text-align: center;
 	padding: 2.5rem 0 2rem;
+}
+
+/* Home. */
+ul.home {
+	color: #404040;
+	padding: 1rem 1rem 1rem 2rem;
+}
+ul.home li {
+	list-style-type: none;
+}
+ul.home h1 {
+	color: #262626;
+	font-size: 2.5rem;
+	margin: 1rem 0 .5rem;
+}
+ul.home q:before,
+ul.home q:before {
+	content: none;
+}
+ul.home q>p {
+	display: inline;
+}
+ul.home q>a {
+	color: #999;
+}
+
+/* Post. */
+.post {
+	color: #404040;
+	position: relative;
+	padding: 1rem 1rem 1rem 2rem;
+}
+.post time {
+	color: #999;
+	font-size: 1.5rem;
+	line-height: 1rem;
+	position: absolute;
+	text-transform: uppercase;
+	-webkit-transition: all 0.25s ease-in-out 0;
+}
+@media only screen and (max-width: 1280px) {
+	.post time {
+		top: 1.5rem;
+		left: -7.5rem;
+		-webkit-transform: rotateZ(-90deg);
+		-webkit-transform-origin: bottom right;
+	}
+}
+@media only screen and (min-width: 1280px) {
+	.post time {
+		top: 3rem;
+		left: -8rem;
+		-webkit-transform: rotateZ(0deg);
+		-webkit-transform-origin: bottom right;
+	}
+}
+.post h1 {
+	color: #262626;
+	font-size: 2.5rem;
+	margin: 1rem 0 .5rem;
+}
+.post .hr {
+	border: thin solid #ccc;
+}
+.post a {
+	color: #000;
+}
+.post img {
+	max-width: 100%;
+	display: block;
+	margin: 0 auto;
 }
