--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+html {
+	font-size: 100%;
+	-ms-text-size-adjust: 100%;
+	-webkit-text-size-adjust: 100%;
+}
 body {
 	margin: 0;
 	padding: 0;
@@ -87,6 +92,7 @@ header h2 + h2 + h2 {
 }
 .flower {
 	position: relative;
+	width: 0;
 	height: 32rem;
 }
 .flower > div {
@@ -198,13 +204,16 @@ ul.home {
 ul.home li {
 	list-style-type: none;
 }
+ul.home li + li {
+	margin: 2rem 0 0;
+}
 ul.home h1 {
 	color: #262626;
 	font-size: 2.5rem;
 	margin: 1rem 0 .5rem;
 }
 ul.home q:before,
-ul.home q:before {
+ul.home q:after {
 	content: none;
 }
 ul.home q>p {
