--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 	<meta charset="utf-8"/>
 	<title>{{ page.title }}</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="stylesheet" href="/css/main.css">
 	<link rel="icon" type="image/png" href="/favicon.png" />
 </head>
