pagination, fonts, more posts

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -2,50 +2,52 @@
 <html lang="en-gb">
 <head>
 <meta charset="utf-8">
-	<meta charset="utf-8"/>
-	<title>{{ page.title }}</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="/css/main.css">
-	<link rel="icon" type="image/png" href="/favicon.png" />
+  <meta charset="utf-8"/>
+  <title>{{ page.title }}</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/css/main.css">
+  <link rel="icon" type="image/png" href="/favicon.png" />
 </head>
-<body>
-	<header>
-		<div class="wrap">
-			<div class="flower">
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-			</div>
-			<div class="content">
-				<div class="avatar"></div>
-				<h1><a href="{{ site.baseurl }}">Attila Ol&aacute;h</a></h1>
-				<h2>Full-time dad, part-time web developer.</h2>
-				<h2 class="live">Lives in
-					<a href="https://en.wikipedia.org/wiki/Bajmok">Bajmok</a>,
-					<a href="https://en.wikipedia.org/wiki/Serbia">Serbia</a>.
-				</h2>
-				<h2 class="work">Works at
-					<a href="http://www.vemble.com/">Vemble</a>.
-				</h2>
-				<h2 class="study">Studies at
-					<a href="https://www.udacity.com/">Udacity</a>.
-				</h2>
-			</div>
-		</div>
-	</header>
-	<div role="main">
-		{{ content }}
-	</div>
-	<footer>
-		&copy; 2011&ndash;2013 Attila Oláh &ndash;
-		contact me at <a href="mailto:attilaolah@gmail.com" rel="me">attilaolah@gmail.com</a>
-	</footer>
+<body class="roboto">
+  <header>
+    <div class="wrap">
+      <div class="flower">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+      <div class="content">
+        <div class="avatar"></div>
+        <h1><a href="{{ site.baseurl }}">Attila Ol&aacute;h</a></h1>
+        <h2>Full-time dad, part-time web developer.</h2>
+        <h2 class="live">Lives in
+          <a href="https://en.wikipedia.org/wiki/Bajmok">Bajmok</a>,
+          <a href="https://en.wikipedia.org/wiki/Serbia">Serbia</a>.
+        </h2>
+        <h2 class="work">Works at
+          <a href="http://www.vemble.com/">Vemble</a>.
+        </h2>
+        <h2 class="study">Studies at
+          <a href="https://www.udacity.com/">Udacity</a>.
+        </h2>
+      </div>
+    </div>
+  </header>
+  <div role="main">
+    {{ content }}
+  </div>
+  <footer>
+    &copy; 2010&ndash;2013 Attila Oláh
+    <span class="wide">&ndash;</span><br class="narrow">
+    contact me at <a href="mailto:attilaolah@gmail.com" rel="me">attilaolah@gmail.com</a>.
+  </footer>
+  <script>var _gaq=[['_setAccount','UA-13035482-4'],['_trackPageview']];(function(d,t,g,s){(g=d.createElement(t)).src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';(s=d.getElementsByTagName(t)[0]).parentNode.insertBefore(g,s)}(document,'script'))</script>
 </body>
 </html>
