updated google analytics

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -7,6 +7,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/main.css">
   <link rel="icon" type="image/png" href="/favicon.png" />
+  <script type="text/javascript">
+
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-13035482-4']);
+    _gaq.push(['_trackPageview']);
+
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+
+  </script>
 </head>
 <body class="roboto">
   <header>
@@ -48,6 +61,5 @@
     <span class="wide">&ndash;</span><br class="narrow">
     contact me at <a href="mailto:attilaolah@gmail.com" rel="me">attilaolah@gmail.com</a>.
   </footer>
-  <script>var _gaq=[['_setAccount','UA-13035482-4'],['_trackPageview']];(function(d,t,g,s){(g=d.createElement(t)).src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';(s=d.getElementsByTagName(t)[0]).parentNode.insertBefore(g,s)}(document,'script'))</script>
 </body>
 </html>
