irssi camper van post

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -13,7 +13,7 @@ title: Attila Oláh
   </li>
   {% endfor %}
 </ul>
-<div class="pagination">
+<div class="pagination condensed">
   {% if paginator.previous_page %}
     {% if paginator.previous_page == 1 %}
       <a class="previous" href="/">Previous</a>
