--- a/css/post.less
+++ b/css/post.less
@@ -12,15 +12,20 @@
     max-width: 100%;
     display: block;
     margin: 0 auto;
-    padding: .25rem;
+	border: .75rem solid #fff;
+	box-shadow: 0 .125rem .25rem #ccc;
 	box-sizing: border-box;
   }
   .right {
-    margin-top: 0;
 	text-align: center;
   }
   .center {
     clear: both;
+  }
+  .right,
+  .center {
+    margin-top: 0;
+	line-height: 200%;
   }
   li > p {
     margin: 0;
